--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "firebase-admin": "^13.2.0",
     "morgan": "~1.9.1",
     "pdfkit": "^0.16.0",
-    "pdfkit-table": "^0.1.99"
+    "pdfkit-table": "^0.1.99",
+    "to-words": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
