--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cassandra-driver": "^4.8.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.5.0",
     "express": "~4.16.1",
+    "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "morgan": "~1.9.1",
     "pdfkit": "^0.16.0",
